# genai-mt-vs

./: .env.example  README.md  pyproject.toml
app/: config.py  retriever_demo.py
app/ingestion/: chunk.py  connectors.py  embeddings.py  indexer.py  pii.py  pipeline.py  preprocess.py
data/tenantA/: contract.txt
data/tenantB/: policy.txt
