[project]
name = "genai-mt"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
  "langchain>=0.2.12",
  "langchain-community>=0.2.11",
  "langchain-openai>=0.1.22",
  "langchain-qdrant>=0.2",
  "qdrant-client>=1.10.1",
  "faiss-cpu>=1.8.0.post1",
  "tiktoken>=0.7.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "uvicorn>=0.30.0",
  "pydantic-settings>=2.7.0"
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0",
]
